@@ -55,7 +55,7 @@ get_script_version() { # $1 = script
     
     echo $version
 }
-  
+ 
 #
 # Do required exports or create the required option string and run the passed script using
 # $SHOREWALL_SHELL
