@@ -126,17 +126,19 @@
       <listitem>
         <para><emphasis role="bold">DEST PORT</emphasis> - Destination Port
         number. Service name from <filename>/etc/services</filename> or port
-        number. May only be specified if the protocol is TCP or UDP (6 or 17).
-        If the PROTOCOL is <quote>ipp2p</quote>, then this column is
-        interpreted as an ipp2p option without the leading <quote>--</quote>
-        (default <quote>ipp2p</quote>). For a list of value ipp2p options, as
-        root type <command>iptables -m ipp2p --help</command>.</para>
+        number. May only be specified if the protocol is TCP (6), UDP (17),
+        DCCP (33), SCTP (132) or UDPLITE (136). If the PROTOCOL is
+        <quote>ipp2p</quote>, then this column is interpreted as an ipp2p
+        option without the leading <quote>--</quote> (default
+        <quote>ipp2p</quote>). For a list of value ipp2p options, as root type
+        <command>iptables -m ipp2p --help</command>.</para>
       </listitem>
 
       <listitem>
         <para><emphasis role="bold">SOURCE PORT</emphasis>- Source Port
         number. Service name from /etc/services or port number. May only be
-        specified if the protocol is TCP or UDP (6 or 17).</para>
+        specified if the protocol is TCP (6), UDP (17), DCCP (33), SCTP (132)
+        or UDPLITE (136).</para>
       </listitem>
 
       <listitem>
