@@ -165,8 +165,8 @@
         <listitem>
           <para>Destination Port number. Service name from services(5) or
           <emphasis>port number</emphasis>. May only be specified if the
-          protocol is <emphasis role="bold">tcp</emphasis> or <emphasis
-          role="bold">udp</emphasis> (6 or 17).</para>
+          protocol is TCP (6), UDP (17), DCCP (33), SCTP (132) or UDPLITE
+          (136).</para>
 
           <para>You may place a comma-separated list of port names or numbers
           in this column if your kernel and iptables include multiport match
@@ -188,8 +188,8 @@
 
         <listitem>
           <para>Service name from services(5) or <emphasis>port
-          number</emphasis>. May only be specified if the protocol is TCP or
-          UDP (6 or 17).</para>
+          number</emphasis>. May only be specified if the protocol is TCP (6),
+          UDP (17), DCCP (33), SCTP (132) or UDPLITE (136).</para>
 
           <para>You may place a comma-separated list of port numbers in this
           column if your kernel and iptables include multiport match
