@@ -237,10 +237,10 @@
         [[!]<emphasis>port-name-or-number</emphasis>[,<emphasis>port-name-or-number</emphasis>]...]</term>
 
         <listitem>
-          <para>If the PROTO column specifies TCP (protocol 6) or UDP
-          (protocol 17) then you may list one or more port numbers (or names
-          from services(5)) separated by commas or you may list a single port
-          range
+          <para>If the PROTO column specifies TCP (6), UDP (17), DCCP (33),
+          SCTP (132) or UDPLITE (136) then you may list one or more port
+          numbers (or names from services(5)) separated by commas or you may
+          list a single port range
           (<emphasis>lowport</emphasis>:<emphasis>highport</emphasis>).</para>
 
           <para>Where a comma-separated list is given, your kernel and
