@@ -84,9 +84,10 @@
         <term>PORT(S) - <replaceable>port</replaceable> [,...]</term>
 
         <listitem>
-          <para>Optional. May only be given if the the PROTO is tcp (6) or udp
-          (17). A list of one or more port numbers or service names from
-          /etc/services. Port ranges of the form
+          <para>Optional. May only be given if the the PROTO is TCP (6), UDP
+          (17), DCCP (33), SCTP (132) or UDPLITE (136). A list of one or more
+          port numbers or service names from /etc/services. Port ranges of the
+          form
           <replaceable>lowport</replaceable>:<replaceable>highport</replaceable>
           may also be included.</para>
         </listitem>
