@@ -37,8 +37,9 @@
 
         <listitem>
           <para>Host address, network address, MAC address, IP address range
-          (if your kernel and ip6tables contain iprange match support) or ipset
-          name prefaced by "+" (if your kernel supports ipset match).</para>
+          (if your kernel and ip6tables contain iprange match support) or
+          ipset name prefaced by "+" (if your kernel supports ipset
+          match).</para>
 
           <para>MAC addresses must be prefixed with "~" and use "-" as a
           separator.</para>
@@ -67,9 +68,9 @@
         role="bold">-</emphasis>|<emphasis>port-name-or-number</emphasis>[,<emphasis>port-name-or-number</emphasis>]...}</term>
 
         <listitem>
-          <para>May only be specified if the protocol is TCP (6) or UDP (17).
-          A comma-separated list of destination port numbers or service names
-          from services(5).</para>
+          <para>May only be specified if the protocol is TCP (6), UDP (17),
+          DCCP (33), SCTP (132) or UDPLITE (136). A comma-separated list of
+          destination port numbers or service names from services(5).</para>
         </listitem>
       </varlistentry>
     </variablelist>
