@@ -345,6 +345,9 @@ None.
 
        ERROR: The separator for a port range is ':', not '-' (21-22) : 
               /etc/shorewall/rules (line 3)
+
+5)  Support has been added for UDPLITE (proto 136) in that DEST PORT(S)
+    and SOURCE PORT(S) may be specified for that protocol.
  
 ----------------------------------------------------------------------------
 V I.  P R O B L E M S  C O R R E C T E D  A N D  N E W   F E A T U R E S
