@@ -29,6 +29,8 @@ Changes in Shorewall 4.4.8
 14) Replace OPTIMIZE=-1 with undocumented optimize 4096 which DISABLES
     default optimizations.
 
+15) Add support for UDPLITE
+
 Changes in Shorewall 4.4.7
 
 1)  Backport optimization changes from 4.5.
